--- a/blog-project/src/app/globals.css
+++ b/blog-project/src/app/globals.css
@@ -4,16 +4,16 @@
 
 html,
 body {
-  /* display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%; */
   height: 100vh;
   overflow-y: scroll;
   overflow: hidden;
-  /* padding: 20px;
-  color: var(--foreground);
-  background-color: rgb(23 23 23); */
   font-family: 'Pretendard', sans-serif;
   background-color: rgb(23 23 23);
+}
+
+body {
+  background-image: url('/images/street2.jpeg');
+  background-size: cover; /* 배경 이미지가 화면에 꽉 차도록 설정 */
+  background-position: center;
+  background-repeat: no-repeat;
 }
