--- a/blog-project/src/app/globals.css
+++ b/blog-project/src/app/globals.css
@@ -8,12 +8,12 @@ body {
   overflow-y: scroll;
   overflow: hidden;
   font-family: 'Pretendard', sans-serif;
-  background-color: rgb(23 23 23);
+  background-color: rgb(28, 28, 28);
 }
 
-body {
+/* body {
   background-image: url('/images/street2.jpeg');
-  background-size: cover; /* 배경 이미지가 화면에 꽉 차도록 설정 */
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-}
+} */
