--- a/blog-project/src/app/globals.css
+++ b/blog-project/src/app/globals.css
@@ -17,3 +17,12 @@ body {
   background-position: center;
   background-repeat: no-repeat;
 } */
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge */
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
